# Stepper-Locking-System_firmware

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile_flash.md
.github/workflows/: build.yml  release.yml
core/: CMakeLists.txt  README.md
core/chip/: chip.h  hal_header.h
core/cmake/: compilerSetup.cmake  detectCompilerType.cmake  extractBuildinfoFromMakefile.cmake  generateCubeMXTargets.cmake  setupEmbeddedBuild.cmake  setupEmbeddedExtraFiles.cmake
core/inc/core/: BuildConfiguration.hpp  BuildConfigurationTypes.h  SafeAssert.h  build_information.hpp  fault_handler.h  hash.hpp
core/mk/: CubeMXMakefileInstrumentation.mk
core/scripts/: checkStaticLibraries.py  generateVersionHeader.py
core/src/: SafeAssert.cpp  abi.cpp  fault_handler.cpp  hash.cpp  std.cpp
core/templates/: CMakeLists.txt.FirmwareTemplate.cmake  CMakeLists.txt.LibraryTemplate.cmake  CMakeLists.txt.SplitterTemplate.cmake  CMakeLists.txt.TestTemplate.cmake
core/tests/src/: HashTest.cpp  SafeAssertTest.cpp
cubemx/: Makefile  StepperLockingSystem.ioc
cubemx/Core/Inc/: CFunctions.h  FreeRTOSConfig.h  main.h  stm32g0xx_hal_conf.h  stm32g0xx_it.h
cubemx/Core/Src/: adc.c  app_freertos.c  dma.c  fdcan.c  gpio.c  i2c.c  main.c  spi.c  stm32g0xx_hal_msp.c  stm32g0xx_hal_timebase_tim.c  stm32g0xx_it.c  tim.c  usart.c
images/: createSvg.py
src/: Application.cxx  Application.hpp  CMakeLists.txt  stm32_hal.h  sync.cxx  sync.hpp
src/LED/: AddressableLedDriver.cxx  AddressableLedDriver.hpp  AnimationController.hpp  BgrColor.hpp  GammaCorrection.hpp  LedDataTypes.hpp  LightController.cxx  LightController.hpp
src/LED/animations/: DoorIsClosedAnimation.hpp  DoorIsOpenAnimation.hpp  DoorShouldCloseAnimation.hpp  FadingAnimation.hpp  LedAnimationBase.hpp  RainbowAnimation.hpp  ShowStatusAnimation.hpp  TestAllColorsAnimation.hpp  WhirlingAnimation.hpp
src/LED/animations/dualRings/: DualAnimations.hpp
src/TeensyStep/: README.md  include.mk
src/TeensyStep/src/: ErrorHandler.cpp  ErrorHandler.h  MotorControlBase.h  RotateControlBase.h  StepControlBase.h  Stepper.cpp  Stepper.h  TeensyStep.h
src/TeensyStep/src/accelerators/: LinRotAccelerator.h
src/TeensyStep/src/hal_port/: HardwareTimer.cpp  HardwareTimer.h  Port.cpp  Port.h  stm32_def.h  timer.c  timer.h
src/TeensyStep/src/timer/generic/: TickTimer.cpp  TickTimer.h  TimerField.h
src/TeensyStep/src/timer/stm32/: TimerField.cpp  TimerField.h
src/analog_to_digital/: AnalogDigital.cxx  AnalogDigital.hpp
src/hall_encoder/: AS5600.cxx  AS5600.hpp  HallEncoder.cxx  HallEncoder.hpp  as5600.cpp  as5600.hpp  as5600_constants.hpp
src/i2c-drivers/: CMakeLists.txt  README.md
src/i2c-drivers/include/i2c-drivers/: 24lcxx.hpp  as5600.hpp  as5600_constants.hpp  bus_accessor.hpp  rtos_accessor.hpp
src/i2c-drivers/src/: as5600.cpp  rtos_accessor.cpp
src/motor_control/: MotorController.cxx  MotorController.hpp  TMC2209.cxx  TMC2209.hpp  UartAccessor.cxx  UartAccessor.hpp
src/settings/: Settings.cxx  Settings.hpp  firmwareSettings.hpp
src/settings/parameter_manager/: .gitignore  CMakeLists.txt  README.md
src/settings/parameter_manager/include/parameter_manager/: SettingsContainer.hpp  SettingsEntry.hpp  SettingsIO.hpp  SettingsUser.hpp
src/settings/parameter_manager/tests/include/: TestSettings.hpp
src/settings/parameter_manager/tests/include/fake/i2c-drivers/: Fake24LC64.hpp
src/settings/parameter_manager/tests/include/mock/: SettingsIOMock.hpp
src/settings/parameter_manager/tests/include/stub/: BusAccessor.hpp
src/settings/parameter_manager/tests/src/: FakeMemoryTest.cxx  SettingsContainerTest.cxx  SettingsEntryTest.cxx  SettingsIOTest.cxx  SettingsUserTest.cxx  main.cxx
src/settings/parameter_manager/tests/src/will-fail/: DuplicateSettingName.cpp  SettingsEntryDefaultBiggerMax.cpp  SettingsEntryDefaultSmallerMin.cpp  SettingsEntryMinBiggerMax.cpp
src/state_machine/: StateMachine.cxx  StateMachine.hpp
src/tactile_switches/: TactileSwitches.cxx  TactileSwitches.hpp
src/util/: CMakeLists.txt  README.md
src/util/include/helpers/: ScopedLock.hpp  freertos.hpp
src/util/include/units/: offset.hpp  scale.hpp  si.hpp  si_prefixes.hpp  si_unit.hpp
src/util/include/units/si/: acceleration.hpp  angle.hpp  angular_acceleration.hpp  angular_velocity.hpp  current.hpp  energy.hpp  force.hpp  frequency.hpp  inertia.hpp  length.hpp  mass.hpp  power.hpp  resistance.hpp  scalar.hpp  temperature.hpp  time.hpp  torque.hpp  torquePerAmpere.hpp  velocity.hpp  voltage.hpp
src/util/include/util/: BinaryLed.hpp  Button.hpp  LedBase.hpp  MapValue.hpp  PwmLed.hpp  PwmOutput.hpp  gpio.hpp
src/util/include/wrappers/: BinarySemaphore.hpp  EventGroup.hpp  HAL.hpp  IFreeRTOSTask.hpp  IMutex.hpp  ITaskWithMemberFunction.hpp  IndependentWatchdog.hpp  Mutex.hpp  Queue.hpp  RecursiveMutex.hpp  Task.hpp
src/util/src/: BinarySemaphore.cpp  Button.cxx  EventGroup.cpp  IndependentWatchdog.cpp  Mutex.cpp  RecursiveMutex.cpp  ScopedLock.cpp  Task.cpp
src/util/test/src/: Angle.cpp  MapValue.cpp  units.cpp
test/: CMakeLists.txt
test/fake/LED/: BgrColor.hpp  LedDataTypes.hpp
test/src/: AnimationsRangeTest.cxx
